@@ -1,3 +1,10 @@
+Fri Jan 20 19:06:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/APG/Containers/Allocator.cpp:
+        * examples/Reactor/Misc/test_timer_queue.cpp:
+          Use ACE_TEST_ASSERT instead of ACE_ASSERT to fix warnings in gcc 4.6
+          release builds
+
 Wed Jan 18 09:02:18 UTC 2012  Martin Corino  <mcorino@remedy.nl>
 
         * bin/fuzz.pl:
